force-app/main/default/objects/Contact_Communication__c.object
<CustomObject>
    <description>This object is to contain private information such as Activities, and Email content to override out of the box privacy of Activities being controlled by the parent object.</description>
    <fields>
        <fullName>Contact_Birthdate__c</fullName>
        <description>Birthdate of contact. Being used in email template</description>
        <formula>Contact__r.Birthdate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Birthdate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contact_Country_of_Birth__c</fullName>
        <description>Country of birth of Contact. Being used in email template</description>
        <formula>TEXT(Contact__r.Country_Of_Birth__c)</formula>
        <label>Contact Country of Birth</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <description>Email address of contact. Being used in email tempalte</description>
        <formula>Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_First_Name__c</fullName>
        <description>Name of contact associated to record. Being used in email template</description>
        <formula>Contact__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Last_Name__c</fullName>
        <description>last name of contact associated to record. being used in email tempalte</description>
        <formula>Contact__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Mailing_Address__c</fullName>
        <description>Mailing address of Contact. Being used in email template</description>
        <formula>if(LEN(Contact__r.MailingStreet) &gt; 0, Contact__r.MailingStreet&amp; &quot; &quot; , &quot;&quot; ) &amp;
if(LEN(Contact__r.MailingCity) &gt; 0, Contact__r.MailingCity&amp; &quot;, &quot; , &quot;&quot; ) &amp;
if(LEN(Contact__r.MailingState ) &gt; 0, Contact__r.MailingState&amp; &quot; &quot; , &quot;&quot; ) &amp;
if(LEN(Contact__r.MailingCountry) &gt; 0, Contact__r.MailingCountry&amp; &quot; &quot;,&quot;&quot;) &amp;
if(LEN(Contact__r.MailingPostalCode) &gt; 0, Contact__r.MailingPostalCode,&quot;&quot;)</formula>
        <label>Contact Mailing Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Salutation__c</fullName>
        <description>Contact salutation. Being used in email tempalte</description>
        <formula>TEXT(Contact__r.Salutation)</formula>
        <label>Contact Salutation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Parent contact of record</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Communications / Activities</relationshipLabel>
        <relationshipName>Contact_Communications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Current_Date__c</fullName>
        <description>gets current date. being used in email template</description>
        <formula>TODAY()</formula>
        <label>Current Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <description>Contains topic of communication</description>
        <label>Subject</label>
        <length>150</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Contact Communication</label>
    <nameField>
        <displayFormat>CC-{0000}</displayFormat>
        <label>Contact Communication Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Communications</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>